# py-inertia-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
