[package]
name = "py-inertia-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_inertia_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }

nalgebra = "0.31.1"

inertia-rs = { git = "https://github.com/sinoara/inertia-rs" }
